# payscope

./: .gitignore  AUDIT_FINDINGS.md  AUDIT_REPORT.md  CHATBOT_FINAL_SUMMARY.md  CHATBOT_IMPLEMENTATION_SUMMARY.md  COMPLETE_SYSTEM_STATUS.md  COMPREHENSIVE_AUDIT.md  CREDENTIALS_SETUP_GUIDE.md  DEPLOYMENT_CHECKLIST.md  EXTERNAL_REPO_ANALYSIS.md  EXTERNAL_REPO_INTEGRATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_READINESS_REPORT.md  FREE_LLM_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  LLAMA_INTEGRATION_GUIDE.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READINESS_AUDIT.md  QUICK_SETUP_NOW.md  README.md  SETUP_YOUR_CREDENTIALS.md  TEST_CHAT_QUERY.md  True  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  README.md  pyproject.toml  run.py  test_api.py
api/src/payscope_api/: admin.py  app.py  chat.py  chat_router.py  health.py  insights.py  main.py  metrics.py  reports.py
api/src/payscope_api/chat/: __init__.py  intent_mapper.py  router.py  schemas.py
api/src/payscope_api/security/: auth.py  context.py  rbac.py  roles.py  token.py
ingestion/: Dockerfile  README.md  pyproject.toml
ingestion/src/payscope_ingestion/: app.py  celery_client.py  config.py  db.py  detect.py  main.py  models.py  storage.py
ml/: Dockerfile  README.md  pyproject.toml
ml/src/payscope_ml/: main.py
processing/: Dockerfile  README.md  pyproject.toml
processing/src/payscope_processing/: __init__.py  celery_app.py  config.py  contracts.py  main.py  pipeline.py  storage.py  tasks.py
processing/src/payscope_processing/agents/: base.py  compliance_agent.py  enhanced_base.py  enhanced_fraud_agent.py  forecasting_agent.py  fraud_agent.py  ingestion_agent.py  memory.py  orchestrator_agent.py  reconciliation_agent.py  simulation_agent.py
processing/src/payscope_processing/audit/: events.py  hashing.py  signing.py
processing/src/payscope_processing/autonomy/: autogen_integration.py  trl_integration.py
processing/src/payscope_processing/cache/: redis_cache.py
processing/src/payscope_processing/dashboard/: __init__.py  generator.py
processing/src/payscope_processing/discovery/: __init__.py  report_discovery.py
processing/src/payscope_processing/forecast/: feature_engineering.py  gnn_risk.py  neuralprophet_model.py  prophet_model.py  simulation.py
processing/src/payscope_processing/graph/: neo4j_writer.py  reasoning.py
processing/src/payscope_processing/integration/: end_to_end.py  wire_llms.py
processing/src/payscope_processing/layout/: layoutlmv3_tagger.py
processing/src/payscope_processing/llm/: __init__.py  client.py  free_client.py  hf_client.py  langchain_integration.py  local_client.py  mapping_prompt.py  openai_o1.py  tgi_client.py
processing/src/payscope_processing/mcp/: __init__.py  servers.py
processing/src/payscope_processing/metrics/: prometheus.py
processing/src/payscope_processing/ml_agents/: crew_setup.py  (+2 more)
(+156 files in other folders)
