[tool.poetry]
name = "payscope-ingestion"
version = "0.1.0"
description = "PayScope ingestion service"
authors = ["PayScope <dev@payscope.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
python-multipart = "^0.0.9"
pydantic-settings = "^2.6.0"
sqlalchemy = {version = "^2.0.0"}
asyncpg = "^0.30.0"
boto3 = "^1.35.0"
anyio = "^4.6.0"
pypdf = "^5.0.0"
celery = "^5.4.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


