[tool.poetry]
name = "payscope-ml"
version = "0.1.0"
description = "PayScope ML service"
authors = ["PayScope <dev@payscope.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"




